test/corpus/fail/M0067.mo
=========
M0067.mo
=========

ignore true.1

---

(source_file
  (exp_dec
    (ignore_exp
      (proj_exp_block
        (lit_exp
          (bool_literal))
        (int_literal)))))
